testando uns negócio ai

--- a/index.html
+++ b/index.html
@@ -12,20 +12,28 @@
     <div class="container">
         <div class="bg-img"></div>
         <h1><p>Melissa!<br>
-            Muito obrigado por hoje, consegui aproveitar<br>
-            a sua bela companhia.<br>
+            Pensei nessa surpresa durante um bom tempo<br>
+            Tentei adicionar elementos que você gosta<br>
+            Como o Snoopy por exemplo.<br>
             <br>
-            Espero que tenha gostado da surpresa.<br>
-            Mas, algo mais importante do que isso...<br>
+            Coloquei minha dedicação, esforço, criatividade para que<br>
+            você se sinta especial, porque você especial (não digo autista)<br>
             <br>
-            Se você gostou da minha companhia, <br>
-            e quiser que isso se repita algum outro dia,<br>
-            pode escolher uma das opções abaixo:</isso></p>
+            Queria adicionar aqui, antes que as palavras fujam da minha<br>
+            cabeça, que você é extremamente linda. E sim, eu quero ter a<br>
+            honra de te conhecer intimamente.<br>
+            <br>
+            É isso.<br>
+            <br>
+            vai ter que escolher uma opção pra falar se gostou dos presentes<br>
+            (Obs: Não fiz a função do botão "Não" KKKKK)</p>
+            
         </h1>
         <br>
         <br>
         <br>
-        <h5>Caso queria algo a mais, apenas me diga</h5>
+        <h5>Se você gostou, e quiser que os nossos lábios <br> se enconstem cerca de 0.23mm<br>
+        <br>apenas diga</h5>
         <div class="button-container">
             <a href="2page.html" class="btn-link">
             <button id="yes-button" class="yes">Sim</button>
